Fix right-side TOC overflow

--- a/src/theme/TOC/styles.module.css
+++ b/src/theme/TOC/styles.module.css
@@ -2,6 +2,7 @@
   max-height: calc(100vh - (var(--ifm-navbar-height) + 2rem));
   position: sticky;
   top: calc(var(--ifm-navbar-height) + 1rem);
+  overflow: auto;
 }
 
 .tableOfContents {
